[REVISION 20080701]

[FIXED] Looking up schema version fails on Rails 2.1.

[REVISION 20080318]

[FIXED] Case-insensitive text columns not recognised.

[REVISION 20080221]

[NEW] PostgreSQL view management via create_view and drop_view.

[REVISION 20080209]

[FIXED] PostgreSQL columns named the same as database keywords (eg. type, column, user, etc.) caused NoSuchMethod errors during model validation.

[REVISION 20080110]

[FIXED] Workaround for bug in MySQL that adversely affects INFORMATION schema performance take 3 (Michael Latta).

[REVISION 20080103]

[FIXED] Workaround for bug in MySQL that adversely affects INFORMATION schema performance take 2 (Michael Latta).

[REVISION 20080102]

[FIXED] Workaround for bug in MySQL that adversely affects INFORMATION schema performance (Michael Latta).

[REVISION 20071128]

[FIXED] Workaround to ensure plugin is only ever loaded once.

[REVISION 20071013]

[NEW] Rake task (db:comments) to show database table comments.

[REVISION 20071013]

[NEW] New migration script methods: set_table_comment and clear_table_comment. Implemented for MySQL and PostgreSQL. Currently not written to schema.rb.

[REVISION 20070905]

[NEW] Explicitly ignore add_foreign_key() and remove_foreign_key() when running under SQLite. This solves issues when migrating schema from other databases.

[REVISION 20070707]

[NEW] Make the table name in table definition accessible.

[REVISION 20070529]

[FIXED] Undefined constant errors when patching connection adapters. Rails now only loads the connection adapter for the specified database (it used to load them all).

[REVISION 20070503]

[NEW] Support for SQL92 [NOT] DEFERRABLE on foreign keys.
[CHANGED] Foreign key names are now assigned by the database unless an explicit name is given (using :name).

[REVISION 20070221]

[NEW] Where possible, determine if a column is case sensitive (or not) based on the presence of case-insensitive indexes.

[REVISION 20070220]
